# tether-rally

./: .gitignore  FPV_PLAN.md  LICENSE  PLAN.md  README.md  SETUP.md  STABILITY_SYSTEM.md  STABILITY_TESTING.md  _codeql_detected_source_root  build_fpv.sh  generate-token.js
arrma-relay/: package-lock.json  package.json  worker-configuration.d.ts  wrangler.jsonc
arrma-relay/public/: admin.html  config.js.example  index.html  latency-test.html  leaderboard.html  leaderboard.json  video-decoder-worker.js
arrma-relay/src/: index.ts
fpv-receiver/: CMakeLists.txt
fpv-receiver/src/: assembler.c  assembler.h  decoder.h  decoder_videotoolbox.c  main.c  protocol.c  protocol.h  receiver.c  receiver.h  renderer.c  renderer.h  stun.c  stun.h
fpv-sender/: go.mod  main.go
fpv-sender-c/: CMakeLists.txt  README.md  build.sh
fpv-sender-c/src/: camera.c  camera.h  encoder.c  encoder.h  main.c  main2.c  protocol.c  protocol.h  rpicam.c  rpicam.h  sender.c  sender.h  stun.c  stun.h
fpv-sender/h264/: reader.go
fpv-sender/protocol/: protocol.go
fpv-sender/sender/: sender.go
fpv-sender/stun/: stun.go
iwa-client/: README.md  package-lock.json  package.json  webpack.common.js  webpack.wbn.js
iwa-client/assets/.well-known/: manifest.webmanifest
iwa-client/src/: decoder.js  fec-decoder.js  fec.js  fec.wasm  h264-depacketizer.js  index.html  index.js  rtp-receiver.js  rtsp-client.js  stun-client.js
iwa-client/wasm/: build.sh  fec.c  fec.h
main/: config.h.example  main.ino
native-viewer/: CMakeLists.txt  README.md
native-viewer/scripts/: package-linux.sh  package-macos.sh
native-viewer/src/: config_manager.cpp  config_manager.h  control_channel.cpp  control_channel.h  go2rtc_manager.cpp  go2rtc_manager.h  main.cpp  renderer.cpp  renderer.h  stream_decoder.cpp  stream_decoder.h  url_prompt.cpp  url_prompt.h  viewer.cpp  viewer.h  whep_client.cpp  whep_client.h
pi-scripts/: .env.example  abs_controller.py  bno055_reader.py  car_config.py  coast_control.py  control-relay.py  control-relay.service  deploy.sh  direction_estimator.py  hall_rpm.py  hill_hold.py  install-wifi.sh  low_speed_traction.py  mediamtx.yml.example  slip_angle_watchdog.py  steering_shaper.py  stun_client.py  surface_adaptation.py  traction_control.py  update-turn-credentials.sh  wifi.nmconnection.example  wpa_supplicant.example.conf  yaw_rate_controller.py
pi-scripts/profiles/: badlands_4kg.ini  ragnarok_stock.ini
pi-scripts/rtl8812au-build/: Dockerfile  build.sh
pi-scripts/rtp-fec-sender/: CMakeLists.txt  fec.c  fec.h  main.c
restreamer/: Dockerfile  README.md  fly.toml  go.mod  main.go
scripts/: generate_ass.py  render_with_telemetry.sh
